# bioawk

./: CMakeLists.txt  bioawkmisc.h  cmakerun.sh  interface_bioawk.h  main.c
examples/: init_bioawk_example.c
generated_source_files/: make_output.txt
generated_source_files/armeabi-v7a/: ytab.c
